Fix Auth: Relative DB path, UserService variable fix, debugging logs